--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,24 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  animations: ^2.0.0
+  firebase_auth: ^3.1.4
+  firebase_core: ^1.8.0
+  cloud_firestore: ^2.5.4
+  provider: ^6.0.1
+  google_sign_in: ^5.1.0
+  uuid: ^3.0.5
+  fluttertoast: ^8.0.7
+  pdf: ^3.7.1
+  flutter_downloader: any
+  flutter_full_pdf_viewer:
+  dio: any
+  permission_handler: any
+  path_provider: ^2.0.9
+  share_plus: any
+  get: ^4.3.8
+  http:
+  youtube_player_flutter:
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -38,7 +56,13 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  flutter_lints: ^1.0.0
+  flutter_native_splash: any
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/img/playstore.png
+  android: true
+  ios: true
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -57,6 +81,26 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/onboard/
+    - assets/courses/
+    - assets/img/
+  fonts:
+    - family: WorkSans
+      fonts:
+        - asset: assets/fonts/WorkSans-Regular.ttf
+        - asset: assets/fonts/WorkSans-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/WorkSans-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/WorkSans-Bold.ttf
+          weight: 700
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Bold.ttf
+        - asset: assets/fonts/Roboto-Regular.ttf
+        - asset: assets/fonts/Roboto-Medium.ttf
+          weight: 400
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
